fix player control buttons flickering when capsule is expanded.

--- a/src/Components/PlayControl/index.less
+++ b/src/Components/PlayControl/index.less
@@ -55,6 +55,7 @@
     height: 100%;
     padding-left: 15px;
     padding-right: 10px;
+    visibility: hidden;
     
     > * {
       transition: margin-right .1s;
@@ -122,6 +123,12 @@
     }
   }
 
+  &.expanded {
+    .control-buttons {
+      visibility: visible;
+    }
+  }
+
   &.open {
     .control-collpase {
       margin-right: 10px;
@@ -131,6 +138,9 @@
     }
     .show-when-open {
       display: inherit;
+    }
+    .control-buttons {
+      visibility: visible;
     }
   }
 }
